Cleanup TransactionalContainerTests
* remove Test `testConsumeAndProduceTransactionKTM_BETA` because it same as testConsumeAndProduceTransactionKTM.
* remove logger